# ocr

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
src/: application.py  backend_config.py  bootstrap.py  cli.py  command_runtime.py  domain.py  install_config.py  mlx_server.py  settings.py  source_adapter.py
src/adapters/: __init__.py
src/adapters/cache/: __init__.py  disabled.py  filesystem.py
src/adapters/output/: __init__.py  markdown.py
src/adapters/output/postprocessors/: __init__.py  loader.py
src/adapters/output/postprocessors/rules/: 10-padded-display-math.json
src/adapters/output/rules/markdown/: base.txt  img.txt
src/adapters/recognition/: __init__.py  _cli.py  agy.py  backend.py  codex.py  errors.py  mlx.py  openvino.py  paddle.py
src/adapters/source/: __init__.py  image.py  pdf.py  zip.py
src/application/: __init__.py  checkpoint.py  group.py  observability.py  pages.py  prompt.py  status.py  toc.py  transcribe.py
src/application/policies/: __init__.py
src/application/policies/group/: __init__.py  base.py  book.py  chapter.py  page.py
src/application/ports/: __init__.py  output.py  recognizer.py  source.py
src/domain/: __init__.py  chapters.py  content.py  document.py  errors.py  status.py
src/ports/: __init__.py  cache.py  output.py  recognition.py  source.py
tests/: test_application_batch.py  test_cli.py  test_cli_contract.py  test_cli_defaults.py  test_cli_output.py  test_domain_grouping.py  test_export_selection.py  test_image_source.py  test_markdown_postprocessor.py  test_mlx_server.py  test_openvino_adapter.py  test_output_contract.py  test_output_markdown.py  test_output_port.py  test_paddle_adapter.py  test_recognition_adapters.py  test_recognition_backend.py  test_recognition_cache.py  test_settings.py  test_source_adapters.py  test_toc.py  test_transcribe.py  test_zip_source.py
typings/fitz/: __init__.pyi
workspace/: prompt.md
