[project]
name = "ocr"
version = "0.1.0"
description = "Command-line OCR for PDF documents."
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28",
    "paddleocr[doc-parser]>=3.7.0",
    "paddlepaddle>=3.3.1",
    "pillow>=11.0",
    "pymupdf>=1.26",
    "pydantic-settings>=2.10",
    "rich>=14.0",
    "typer>=0.16",
    "structlog>=25.4",
]

[project.scripts]
ocr = "cli:app"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cli", "settings"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["application*", "domain*", "adapters*"]

[dependency-groups]
dev = [
    "basedpyright>=1.28",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.12",
    "setuptools>=80",
]

[tool.basedpyright]
typeCheckingMode = "all"
allowedUntypedLibraries = ["paddleocr"]
stubPath = "typings"
pythonVersion = "3.13"
pythonPlatform = "All"
include = ["src", "tests"]
exclude = ["setup.py", "**/__pycache__", "**/.venv", "**/build", "**/dist"]
reportUnusedCallResult = "warning"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnusedVariable = "error"
reportMissingParameterType = "error"
reportPrivateUsage = "error"

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "ISC001",
    "D203",
    "D213",
    "CPY001",
    "FBT001",
    "FBT002",
    "TD002",
    "TD003",
    "FIX002",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG", "PLR2004", "SLF001", "D"]
"src/cli.py" = ["ARG001", "D100", "D103"]
"setup.py" = ["D", "N812"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
    "--cov=src",
    "--cov-report=term-missing",
]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
