[project]
name = "ocr"
version = "0.2.0"
description = "Local PaddleOCR-VL document OCR backed by an MLX-VLM server."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mlx-vlm>=0.6.5",
    "paddleocr[doc-parser]>=3.7.0",
    "paddlex[ocr,genai-client]>=3.7.0",
    "paddlepaddle>=3.3.1",
    "pillow>=11.0",
    "pymupdf>=1.26",
    "typer>=0.16",
]

[project.scripts]
ocr = "cli:main"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = [
    "application",
    "cli",
    "command_runtime",
    "domain",
    "mlx_server",
    ]

[tool.setuptools.packages.find]
where = ["src"]
include = ["adapters*", "ports*"]

[tool.setuptools.package-data]
"adapters.output" = ["rules/*/*.txt"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.12", "basedpyright>=1.28"]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", "ISC001", "D203", "D213", "CPY001", "FBT001", "FBT002",
    "D105", "D107", "E501", "EM101", "EM102", "FBT003", "I001",
    "PLC0415", "PLR0913", "S310", "S603", "TC001", "TC003", "TRY003", "TRY004",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "D"]

[tool.basedpyright]
typeCheckingMode = "basic"
pythonVersion = "3.13"
include = ["src", "tests"]
reportMissingTypeStubs = "none"
reportAttributeAccessIssue = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-ra", "--strict-config", "--strict-markers"]
